# Client_Server

./: .gitignore
cache/: redis.conf
client/: index.html
client/css/: styles.css
client/script/: api.js  event-listeners.js  index.js  renderer.js
config/: config.yml
databases/: .docker-compose.yml.swp  docker-compose.yml
databases/order/: .docker-compose.yml.swp  docker-compose.yml
databases/product/: .docker-compose.yml.swp  docker-compose.yml
databases/user/: .docker-compose.yml.swp  docker-compose.yml
load_balancing/: nginx.conf
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/common/: Cargo.toml
server/common/src/: db_utils.rs  lib.rs  request_response_utils.rs  utils.rs
server/config/: config.yml
server/data/: products.json  products.json.bak
server/order_manager/: Cargo.toml
server/order_manager/config/: config.yml
server/order_manager/src/: handlers.rs  main.rs
server/order_manager/src/db/: mod.rs  postgres.rs  schema.sql
server/order_manager/src/entities/: mod.rs  orders.rs  prelude.rs
server/product_manager/: Cargo.toml
server/product_manager/config/: config.yml
server/product_manager/src/: context.rs  handlers.rs  main.rs
server/product_manager/src/cache/: redis_cache.rs
server/product_manager/src/db/: mongo.rs  postgres.rs  schema.sql
server/product_manager/src/entities/: mod.rs  prelude.rs  product.rs
server/src/: context.rs  db.rs  handlers.rs  items.rs  main.rs  settings.rs  utils.rs
server/src/cache/: redis_cache.rs
server/src/db/: mod.rs  mongo.rs  postgres.rs  schema.sql
server/src/entities/: account.rs  mod.rs  orders.rs  prelude.rs  product.rs
server/user_manager/: Cargo.toml
server/user_manager/config/: config.yml
server/user_manager/src/: handlers.rs  main.rs
server/user_manager/src/db/: mongo.rs  postgres.rs  schema.sql
server/user_manager/src/entities/: account.rs
