[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
hyper = {version = "0.14.9", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.8.17"
tokio = { version = "1.7", features = ["full"] }
url = "2.2.2"
urlencoding = "1.3.3"

