[package]
name = "product_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
common = {path = "../common"}
http = "0.2.4"
hyper = {version = "0.14.9", features = ["full"]}
hyper-tls = "0.5.0"
local-ip-address = "0.5.1"
mongodb = "2.4.0"
redis = "0.22.3"
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.8.17"
tokio = { version = "1.7", features = ["full"] }
url = "2.2.2"
urlencoding = "1.3.3"

[[bin]]
name = "product_manager"
path = "src/main.rs"